--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,21 @@
 {
-"manifest_version": 3,
-"name": "Personal Dashboard",
-"version": "1.1.0",
-"description": "New Tab dashboard with Google Calendar (OAuth via launchWebAuthFlow) and a weather panel placeholder.",
-"chrome_url_overrides": { "newtab": "newtab.html" },
-"options_page": "options.html",
-"action": { "default_title": "Open Dashboard", "default_popup": "popup.html" },
-"background": { "service_worker": "sw.js" },
-"permissions": ["storage", "identity"],
-"host_permissions": [
-"https://www.googleapis.com/*",
-"https://accounts.google.com/*",
-"https://geocoding-api.open-meteo.com/*",
-"https://api.open-meteo.com/*"
-],
-"icons": {
-"16": "icons/icon_16.png",
-"48": "icons/icon_48.png",
-"128": "icons/icon_128.png"
-}
+  "manifest_version": 3,
+  "name": "Scott’s Dashboard",
+  "version": "1.0.0",
+  "description": "Calendar + weather dashboard on the new tab.",
+  "chrome_url_overrides": {
+    "newtab": "newtab.html"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "permissions": [],
+  "host_permissions": [
+    "https://calendar.google.com/*"
+  ],
+  "action": {
+    "default_title": "Scott’s Dashboard"
+  }
 }
