--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,12 @@
 {
   "manifest_version": 3,
-  "name": "Scott’s Dashboard",
+  "name": "Scott’s New Tab Dashboard",
   "version": "1.0.0",
-  "description": "Calendar + weather dashboard on the new tab.",
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
-  },
+  "description": "Redirects the New Tab page to Scott's hosted dashboard.",
+  "chrome_url_overrides": { "newtab": "newtab.html" },
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  },
-  "permissions": [],
-  "host_permissions": [
-    "https://calendar.google.com/*"
-  ],
-  "action": {
-    "default_title": "Scott’s Dashboard"
   }
 }
