--- a/newtab-redirect/manifest.json
+++ b/newtab-redirect/manifest.json
@@ -4,9 +4,16 @@
   "version": "1.0.0",
   "description": "Redirects the New Tab page to Scott's hosted dashboard.",
   "chrome_url_overrides": { "newtab": "newtab.html" },
-  "icons": {
+"icons": {
+  "16": "icons/icon16.png",
+  "48": "icons/icon48.png",
+  "128": "icons/icon128.png"
+},
+"action": {
+  "default_icon": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "default_popup": "newtab.html"
 }
